2007-11-28  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* TODO:
	* cvsanaly:
	* cvsanaly-plugins:
	* pycvsanaly/main.py:
	* pycvsanaly/CADatabase.py:
	* pycvsanaly/Parser.py:
	* pycvsanaly/CVSParser.py:
	* pycvsanaly/SVNParser.py:
	* pycvsanaly/GitParser.py:
	* pycvsanaly/ContentHandler.py:
	* pycvsanaly/DBContentHandler.py:
	* pycvsanaly/utils.py:
	* pycvsanaly/plugins/__init__.py:
	* pycvsanaly/plugins/evolution.py:
	* pycvsanaly/plugins/html.py:
	* pycvsanaly/plugins/main.py:
	* libcvsanaly/__init__.py:
	* libcvsanaly/CVSAnaly.py:
	* libcvsanaly/Command.py:
	* libcvsanaly/Database.py:
	* libcvsanaly/FindProgram.py:
	* libcvsanaly/utils.py:

	Merge cvsanaly2 work in progress. It's not stable yet. 
	
2007-07-16  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/commit.py:
	* pycvsanaly/files.py:
	* pycvsanaly/main.py:
	* pycvsanaly/repository.py:
	* pycvsanaly/ContentHandlers.py:
	* pycvsanaly/Parser.py:
	* pycvsanaly/Repository.py:
	* pycvsanaly/utils.py:

	Use ReprositoryHandler from libresoft-utils. First approach,
	there are regressions and things broken (specially in cvs).
	
2007-06-05  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
	* pycvsanaly/main.py:

	Add an option --module-level to specify which directory level should
	be considered as a module by cvsanaly. 

2007-06-06  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly/commit.py:
	* pycvsanaly/repository.py:
	* pycvsanaly/tables.py:
	* pycvsanaly/plugins/graphs/intermediate_tables.py:
	* pycvsanaly/plugins/graphs/tables_skeleton.py:

	"state" field replaced by a bool field called "removed", which is
	True if the file has been removed in that revision and False
	otherwise. The "inAttic" field (removed some revisions ago) was
	used by the graphs plugin, but was not longer present in the
	database because it was replaced by "state". That plugin has been
	updated to use the new "removed" plugin. All the plugins have been